2007-10-24  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* symtab.c (find_line_symtab): scan through psymtabs
	when exact_match is zero.

2007-10-23  Atsushi Nemoto  <anemo@mba.ocn.ne.jp>

	* mips-tdep.c (LL_OPCODE, LLD_OPCODE, SC_OPCODE, SCD_OPCODE): Define.
	(deal_with_atomic_sequence): New.
	(mips_software_single_step): Use it.

2007-10-23  Daniel Jacobowitz  <dan@codesourcery.com>

	PR gdb/2336
	* configure.ac: Modify $LIBINTL before the BFD check.
	* configure: Regenerated.

2007-10-23  Joel Brobecker  <brobecker@adacore.com>

	* buildsym.c (free_pending_blocks): Remove commented-out code.
	(make_blockvector): Likewise. Re-use free_pending_blocks.
	(end_symtab): Remove commented-out code.

2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* top.c (command_loop): Fix output for shrinkage.

2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* cp-name-parser.y (exp1): Add & ( var ) as a reference expression.
	(exp): Remove and document function-like casts.

2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* cp-support.c: Include "safe-ctype.h".
	(cp_already_canonical): New function.
	(cp_canonicalize_string): Use it.  Return NULL for already canonical
	strings.
	(mangled_name_to_comp): Update call to cp_demangled_name_to_comp.
	(cp_func_name, remove_params): Likewise.
	(cp_find_first_component_aux): Use ISSPACE.
	* cp-support.h (cp_demangled_name_to_comp): Correct comment.  Remove
	MEMORY_P argument.
	* cp-name-parser.y (ALLOC_CHUNK): Define.
	(struct demangle_info): Add PREV and NEXT.  Increase the size of
	COMPS.
	(d_grab): Convert to a function.
	(allocate_info): Rewrite.
	(cp_demangled_name_to_comp): Remove MEMORY argument.  Do not use
	strlen.  Update call to allocate_info.  Do not free it on failure.
	(main): Update calls to cp_demangled_name_to_comp.
	* Makefile.in (cp-support.o): Update.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* std-regs.c (value_of_builtin_frame_fp_reg)